[ADD] adding pwa functinality, theming and more

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^3.6.3",
     "@nuxt/ui": "^3.3.2",
     "@tailwindcss/vite": "^4.1.12",
+    "@vite-pwa/nuxt": "^1.0.4",
     "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.12",
