--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16"
+  },
+  "overrides": {
+    "vite": "npm:rolldown-vite@latest"
   }
 }
