[ADD] Added React Course and Home page with Firebase integration

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "@vite-pwa/nuxt": "^1.0.4",
     "better-sqlite3": "^12.2.0",
+    "firebase": "^12.3.0",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.20",
