[NEW] Adding playgorund

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
+  "compilerOptions": {
+    "types": ["./types/monaco.d.ts"]
+  },
   "files": [],
   "references": [
     {
