adding vercel analytics

--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@nuxt/content": "^3.6.3",
     "@nuxt/ui": "^3.3.2",
     "@tailwindcss/vite": "^4.1.12",
+    "@vercel/analytics": "^1.5.0",
     "@vite-pwa/nuxt": "^1.0.4",
     "better-sqlite3": "^12.2.0",
     "codemirror": "^6.0.2",
-    "monaco-editor": "^0.53.0",
     "firebase": "^12.3.0",
+    "monaco-editor": "^0.53.0",
     "nuxt": "^4.0.3",
     "nuxt-rebundle": "^0.0.2",
     "tailwindcss": "^4.1.12",
